--- a/package.json
+++ b/package.json
@@ -1,23 +1,19 @@
 {
-  "name": "covid-tracker",
-  "version": "1.0.0",
-  "private": true,
-  "homepage": ".",
-  "dependencies": {
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "plotly.js": "^2.26.0",
-    "react-plotly.js": "^2.6.0",
-    "date-fns": "^2.30.0",
-    "react-datepicker": "^4.21.0"
+  "scripts": {
+    "dev": "npx vite",
+    "build": "npx vite build",
+    "preview": "npx vite preview",
+    "deploy": "npx vite build && npx gh-pages -d dist"
   },
   "devDependencies": {
-    "@vitejs/plugin-react": "^4.2.0",
-    "vite": "^5.0.0"
+    "@vitejs/plugin-react": "^5.1.0",
+    "vite": "^7.1.12"
   },
-  "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview"
+  "dependencies": {
+    "plotly.js": "^3.1.2",
+    "react": "^19.2.0",
+    "react-datepicker": "^8.8.0",
+    "react-dom": "^19.2.0",
+    "react-plotly.js": "^2.6.0"
   }
 }
